feat: user list filter

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -18,6 +18,7 @@ body.performance *::after {
   filter: none !important;
   backdrop-filter: none !important;
   background-image: none !important;
+  overflow: hidden;
 }
 
 html {
