feat: purchase register from admin panel

--- a/client/src/views/bot_users/children/single-user/style.scss
+++ b/client/src/views/bot_users/children/single-user/style.scss
@@ -7,4 +7,16 @@
     display: flex;
     justify-content: space-between;
   }
+
+  &__purchases {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  &__purchases-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
