--- a/client/src/views/bot_users/children/single-user/style.scss
+++ b/client/src/views/bot_users/children/single-user/style.scss
@@ -19,4 +19,10 @@
     flex-direction: column;
     gap: 10px;
   }
+
+  a {
+    text-decoration: underline;
+    color: #63e2b7;
+    cursor: pointer;
+  }
 }
